Add impl note to document the XX option